--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Module 10 u of u bootcamp",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -14,15 +14,15 @@
     "jest",
     "RPG",
     "node",
-    "javascript",
-    "bootcamp",
-    "module",
-    "10"
+    "javascript"
   ],
   "author": "Jon Bird",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/attidack/jest-another-RPG/issues"
   },
-  "homepage": "https://github.com/attidack/jest-another-RPG#readme"
+  "homepage": "https://github.com/attidack/jest-another-RPG#readme",
+  "devDependencies": {
+    "jest": "^28.1.3"
+  }
 }
