--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
-  "name": "jest-another-rpg",
+  "name": "rpg",
   "version": "1.0.0",
-  "description": "Module 10 u of u bootcamp",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/attidack/jest-another-RPG.git"
-  },
-  "keywords": [
-    "jest",
-    "RPG",
-    "node",
-    "javascript"
-  ],
-  "author": "Jon Bird",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/attidack/jest-another-RPG/issues"
-  },
-  "homepage": "https://github.com/attidack/jest-another-RPG#readme",
-  "devDependencies": {
-    "jest": "^28.1.3"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "inquirer": "^8.2.4",
+    "jest": "^24.9.0"
   }
 }
